; ModuleID = '/home/carl/AnghaBench/linux/drivers/net/ethernet/mellanox/mlxsw/extr_pci.c_mlxsw_pci_queue_fini.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/net/ethernet/mellanox/mlxsw/extr_pci.c_mlxsw_pci_queue_fini.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.mlxsw_pci = type { i32 }
%struct.mlxsw_pci_queue_ops = type { i32 (%struct.mlxsw_pci.0*, %struct.mlxsw_pci_queue*)* }
%struct.mlxsw_pci.0 = type opaque
%struct.mlxsw_pci_queue = type opaque
%struct.mlxsw_pci_queue.1 = type { i32, %struct.mlxsw_pci_mem_item }
%struct.mlxsw_pci_mem_item = type { i32, i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.mlxsw_pci*, %struct.mlxsw_pci_queue_ops*, %struct.mlxsw_pci_queue.1*)* @mlxsw_pci_queue_fini to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @mlxsw_pci_queue_fini(%struct.mlxsw_pci* %0, %struct.mlxsw_pci_queue_ops* %1, %struct.mlxsw_pci_queue.1* %2) #0 {
  %4 = alloca %struct.mlxsw_pci*, align 8
  %5 = alloca %struct.mlxsw_pci_queue_ops*, align 8
  %6 = alloca %struct.mlxsw_pci_queue.1*, align 8
  %7 = alloca %struct.mlxsw_pci_mem_item*, align 8
  store %struct.mlxsw_pci* %0, %struct.mlxsw_pci** %4, align 8
  store %struct.mlxsw_pci_queue_ops* %1, %struct.mlxsw_pci_queue_ops** %5, align 8
  store %struct.mlxsw_pci_queue.1* %2, %struct.mlxsw_pci_queue.1** %6, align 8
  %8 = load %struct.mlxsw_pci_queue.1*, %struct.mlxsw_pci_queue.1** %6, align 8
  %9 = getelementptr inbounds %struct.mlxsw_pci_queue.1, %struct.mlxsw_pci_queue.1* %8, i32 0, i32 1
  store %struct.mlxsw_pci_mem_item* %9, %struct.mlxsw_pci_mem_item** %7, align 8
  %10 = load %struct.mlxsw_pci_queue_ops*, %struct.mlxsw_pci_queue_ops** %5, align 8
  %11 = getelementptr inbounds %struct.mlxsw_pci_queue_ops, %struct.mlxsw_pci_queue_ops* %10, i32 0, i32 0
  %12 = load i32 (%struct.mlxsw_pci.0*, %struct.mlxsw_pci_queue*)*, i32 (%struct.mlxsw_pci.0*, %struct.mlxsw_pci_queue*)** %11, align 8
  %13 = load %struct.mlxsw_pci*, %struct.mlxsw_pci** %4, align 8
  %14 = bitcast %struct.mlxsw_pci* %13 to %struct.mlxsw_pci.0*
  %15 = load %struct.mlxsw_pci_queue.1*, %struct.mlxsw_pci_queue.1** %6, align 8
  %16 = bitcast %struct.mlxsw_pci_queue.1* %15 to %struct.mlxsw_pci_queue*
  %17 = call i32 %12(%struct.mlxsw_pci.0* %14, %struct.mlxsw_pci_queue* %16)
  %18 = load %struct.mlxsw_pci_queue.1*, %struct.mlxsw_pci_queue.1** %6, align 8
  %19 = getelementptr inbounds %struct.mlxsw_pci_queue.1, %struct.mlxsw_pci_queue.1* %18, i32 0, i32 0
  %20 = load i32, i32* %19, align 4
  %21 = call i32 @kfree(i32 %20)
  %22 = load %struct.mlxsw_pci*, %struct.mlxsw_pci** %4, align 8
  %23 = getelementptr inbounds %struct.mlxsw_pci, %struct.mlxsw_pci* %22, i32 0, i32 0
  %24 = load i32, i32* %23, align 4
  %25 = load %struct.mlxsw_pci_mem_item*, %struct.mlxsw_pci_mem_item** %7, align 8
  %26 = getelementptr inbounds %struct.mlxsw_pci_mem_item, %struct.mlxsw_pci_mem_item* %25, i32 0, i32 2
  %27 = load i32, i32* %26, align 4
  %28 = load %struct.mlxsw_pci_mem_item*, %struct.mlxsw_pci_mem_item** %7, align 8
  %29 = getelementptr inbounds %struct.mlxsw_pci_mem_item, %struct.mlxsw_pci_mem_item* %28, i32 0, i32 1
  %30 = load i32, i32* %29, align 4
  %31 = load %struct.mlxsw_pci_mem_item*, %struct.mlxsw_pci_mem_item** %7, align 8
  %32 = getelementptr inbounds %struct.mlxsw_pci_mem_item, %struct.mlxsw_pci_mem_item* %31, i32 0, i32 0
  %33 = load i32, i32* %32, align 4
  %34 = call i32 @pci_free_consistent(i32 %24, i32 %27, i32 %30, i32 %33)
  ret void
}

declare dso_local i32 @kfree(i32) #1

declare dso_local i32 @pci_free_consistent(i32, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
